force-app/main/default/objects/Lot__c/fields/Estimated_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Close_Date__c</fullName>
    <label>Estimated Close Date</label>
    <type>Date</type>
</CustomField>