force-app/main/default/objects/Lot__c/fields/Home_Type__c.field-meta.xml
<CustomField>
    <fullName>Home_Type__c</fullName>
    <label>Home Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>For Buyer</fullName>
            </value>
            <value>
                <fullName>Spec</fullName>
            </value>
            <value>
                <fullName>Model</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>