force-app/main/default/objects/Lot__c/fields/Lot_Image_Path__c.field-meta.xml
<CustomField>
    <fullName>Lot_Image_Path__c</fullName>
    <formula>&apos;house-images/&apos; +  Name + &apos;.jpg&apos;</formula>
    <label>Lot Image Path</label>
    <type>Text</type>
</CustomField>