force-app/main/default/objects/Lot__c/fields/Neighborhood__c.field-meta.xml
<CustomField>
    <fullName>Neighborhood__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Neighborhood</label>
    <referenceTo>Neighborhood__c</referenceTo>
    <relationshipLabel>Lots</relationshipLabel>
    <relationshipName>Lots</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>