force-app/main/default/objects/Lot__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Developed</fullName>
            </value>
            <value>
                <fullName>Acquiring Permits</fullName>
            </value>
            <value>
                <fullName>Awaiting Permission</fullName>
            </value>
            <value>
                <fullName>Under Construction</fullName>
            </value>
            <value>
                <fullName>Construction Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>